Prevent search box spilling off bottom of screen

--- a/src/style/CardSmall.scss
+++ b/src/style/CardSmall.scss
@@ -1,9 +1,13 @@
 .card-small {
-  width: 25%;
+  //width: 25%;
 
   .card-content {
     width: auto;
     display: block;
+
+    img.card-art {
+      width: 100%;
+    }
   }
 
   .card-name {
